# solana-faucet-demo

./: Cargo.toml
src/: faucet.rs
