[package]
name = "solana-faucet"
description = "Solana Faucet"
documentation = "https://docs.rs/solana-faucet"
version = "0.0.1"
edition = "2018"

[dependencies]
bincode = "1.3.3"
byteorder = "1.4.3"
clap = "2.33.1"
crossbeam-channel = "0.5.7"
log = "0.4.17"
serde = "1.0.158"
serde_derive = "1.0.103"
solana-sdk = "1.15.2"
spl-memo = { version = "=3.0.1", features = ["no-entrypoint"] }
thiserror = "1.0.31"
tokio = { version = "~1.14.1", features = ["full"] }

[lib]
crate-type = ["lib"]
name = "solana_faucet"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
