[package]
name = "solana-faucet"
version = "0.0.1"
edition = "2018"

[dependencies]
bincode = "1.3.3"
byteorder = "1.4.3"
log = "0.4.17"
serde = "1.0.158"
serde_derive = "1.0.103"
solana-sdk = "1.15.2"
spl-memo = { version = "=3.0.1", features = ["no-entrypoint"] }
thiserror = "1.0.31"

[lib]
crate-type = ["lib"]
name = "solana_faucet"

[[bin]]
name = "solana-faucet"
path = "src/bin/faucet.rs"
